--- a/.github/workflows/llm-devsecops.yml
+++ b/.github/workflows/llm-devsecops.yml
@@ -1,30 +1,33 @@
-name: LLMOps CI/CD Pipeline
+name: LLMOps Build, Scan, and Deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" ] # Trigger on pushes to the main branch
+  workflow_dispatch: # Allow manual trigger from the GitHub UI
 
-# Define environment variables for the workflow
+# Define environment variables based on your Kubernetes and Docker files
 env:
-  DOCKER_IMAGE_NAME: your-dockerhub-username/llm-app
-  DOCKER_TAG: ${{ github.sha }} # Use the commit SHA for a unique, immutable tag
-  K8S_DEPLOYMENT_NAME: llm-deployment
-  K8S_NAMESPACE: default
-  
+  # The image name used in your deployment.yaml is 'darryl1975/fastapi-app'. 
+  # Set the full repository path, replacing 'darryl1975' with your DOCKERHUB_USERNAME secret.
+  IMAGE_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app
+  IMAGE_TAG: ${{ github.sha }} # Use the commit SHA for a unique, immutable tag
+  K8S_DEPLOYMENT: gpt-huggingface # Name from deployment.yaml
+  K8S_CONTAINER_NAME: gptcontainer # Name of the container inside deployment.yaml
+  K8S_NAMESPACE: default # Adjust if you use a different namespace
+
 jobs:
   build-scan-deploy:
     runs-on: ubuntu-latest
     
-    # Permissions are needed for checkout, and to interact with GitHub's token for secure actions
     permissions:
-      contents: read
-      packages: write
+      contents: read # Required to checkout the code
+      packages: write # Required for security features (SARIF report upload)
       
     steps:
       - name: ⬇️ Checkout Repository Code
         uses: actions/checkout@v4
 
-      # --- 1. Push your image to Docker Hub (Preparation: Login and Build) ---
+      # --- 1. BUILD IMAGE & PUSH (Login Prep) ---
       
       - name: 🛠 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -35,56 +38,54 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: 🧱 Build Docker Image (Do NOT push yet)
-        # Build the image and tag it locally for the Trivy scan
+      - name: 🧱 Build Docker Image (Tag Locally)
+        # Build and tag the image using the unique commit SHA
         run: |
           docker build . \
-            --tag ${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }} \
+            --tag ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }} \
             --file Dockerfile
 
-      # --- 2. Scan image using Trivy ---
+      # --- 2. SCAN IMAGE using Trivy ---
 
       - name: 🔒 Scan Image with Trivy
         uses: aquasecurity/trivy-action@0.21.0
         with:
-          # Scan the locally built image
-          image-ref: ${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }}
+          image-ref: ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}
           format: 'table'
-          # Set the minimum severity to report. Adjust as needed (e.g., HIGH,CRITICAL)
+          # Fail the build if any HIGH or CRITICAL severity vulnerabilities are found
           severity: 'HIGH,CRITICAL'
-          # Fail the build if any specified severity vulnerabilities are found
           exit-code: '1' 
-          # Optional: Upload a SARIF report to GitHub Security tab
-          output: 'trivy-results.sarif'
+          output: 'trivy-results.sarif' # Output SARIF for GitHub Security Tab
           
       - name: ⬆️ Upload Trivy Scan Report
-        if: always() # Run even if the previous step failed, so you can see the results
+        if: always() # Run even if Trivy fails, so you can see the security report
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'trivy-results.sarif'
 
-      # --- 1. Push your image to Docker Hub (Completion: Push) ---
+      # --- 1. PUSH IMAGE (Completion) ---
 
       - name: 📤 Push Image to Docker Hub
-        # This step only runs if the Trivy scan (step 5) passed successfully (exit-code 0)
-        run: docker push ${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }}
+        # This step only executes if the Trivy scan (exit-code 1) passed (exit-code 0)
+        run: docker push ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}
 
-      # --- 3. Push to Deploy to Kubernetes ---
+      # --- 3. DEPLOY to Kubernetes ---
 
-      - name: ☁️ Deploy to Kubernetes
+      - name: ☁️ Set Kubernetes Context
         uses: azure/k8s-set-context@v4
         with:
-          # Use a secret containing your Kubernetes configuration file content
+          # Uses the KUBE_CONFIG_DATA secret for authentication
           kubeconfig: ${{ secrets.KUBE_CONFIG_DATA }}
           
-      - name: 🚀 Apply Kubernetes Manifest
-        # This assumes you have a deployment file (e.g., k8s/deployment.yaml) that 
-        # uses the image name defined in the environment variables.
+      - name: 🚀 Update Kubernetes Deployment
         run: |
-          # The deployment file must be updated to use the new image tag before applying.
-          # Here, we demonstrate patching the deployment to use the new image tag.
-          kubectl set image deployment/${{ env.K8S_DEPLOYMENT_NAME }} \
-            app-container=${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }} \
+          # Patch the existing Deployment to use the newly pushed, secure image tag
+          kubectl set image deployment/${{ env.K8S_DEPLOYMENT }} \
+            ${{ env.K8S_CONTAINER_NAME }}=${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }} \
             --namespace ${{ env.K8S_NAMESPACE }}
           
-          echo "Successfully triggered deployment rollout in Kubernetes."
+          # Force a rollout to ensure the change is applied immediately
+          kubectl rollout restart deployment/${{ env.K8S_DEPLOYMENT }} \
+            --namespace ${{ env.K8S_NAMESPACE }}
+          
+          echo "Deployment ${{ env.K8S_DEPLOYMENT }} updated with image tag ${{ env.IMAGE_TAG }}"
