--- a/.github/workflows/llm-devsecops.yml
+++ b/.github/workflows/llm-devsecops.yml
@@ -2,90 +2,90 @@ name: LLMOps Build, Scan, and Deploy
 
 on:
   push:
-    branches: ["main"] # Trigger on pushes to the main branch
+    branches: ["main"]
   workflow_dispatch: # Allow manual trigger from the GitHub UI
 
 # Define environment variables based on your Kubernetes and Docker files
 env:
-  # The image name used in your deployment.yaml is 'darryl1975/fastapi-app'.
-  # Set the full repository path, replacing 'darryl1975' with your DOCKERHUB_USERNAME secret.
-  IMAGE_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app
-  IMAGE_TAG: ${{ github.sha }} # Use the commit SHA for a unique, immutable tag
-  K8S_DEPLOYMENT: gpt-huggingface # Name from deployment.yaml
-  K8S_CONTAINER_NAME: gptcontainer # Name of the container inside deployment.yaml
-  K8S_NAMESPACE: default # Adjust if you use a different namespace
+  IMAGE_NAME: llmops-fastapi
+  IMAGE_TAG: latest
+  IMAGE_REPO: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
+
+  DEPLOYMENT_FILE: deployment.yaml
+  SERVICE_FILE: service.yaml
+  DEPLOYMENT_NAME: gpt-huggingface
+  CONTAINER_NAME: gptcontainer
 
 jobs:
-  build-scan-deploy:
+  build-push-docker:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read # Required to checkout the code
-      packages: write # Required for security features (SARIF report upload)
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }} .
+
+      - name: Log in to GitHub Container Registry
+        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Push Docker Image to GitHub Container Registry
+        run: |
+          docker push ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}
+
+  trivy-scan:
+    runs-on: ubuntu-latest
+    needs: build-push-docker
 
     steps:
-      - name: ⬇️ Checkout Repository Code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      # --- 1. BUILD IMAGE & PUSH (Login Prep) ---
-
-      - name: 🛠 Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: 🔑 Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: 🧱 Build and Push Docker image
-        # Build and push the image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true # We will push later after scanning
-          tags: ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}
-
-      # --- 2. SCAN IMAGE using Trivy ---
-
-      - name: 🔒 Scan Image with Trivy
-        uses: aquasecurity/trivy-action@0.21.0
-        with:
-          image-ref: ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}
-          format: "table"
-          # Fail the build if any HIGH or CRITICAL severity vulnerabilities are found
-          severity: "HIGH,CRITICAL"
-          exit-code: "1"
-          token: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # --- 3. DEPLOY to Kubernetes Digital Ocean---
-
-      - name: ⚙️ Install and Authenticate doctl
-        # Uses the DigitalOcean PAT to enable the 'doctl' CLI tool
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-      - name: ☁️ Save DOKS Kubeconfig
-        # Runs only if the Trivy scan passed
-        if: success()
+      - name: Authenticate Docker for Trivy
+        run: | 
+          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      
+      - name: Trivy Scan with GitHub Container Registry
         run: |
-          doctl kubernetes cluster kubeconfig save ${{ secrets.DOKS_CLUSTER_NAME }}
+          docker run --rm \
+          -v /var/run/docker.sock:/var/run/docker.sock \
+          -v $HOME/.cache/trivy:/root/.cache \
+          aquasecurity/trivy:latest image --severity HIGH, CRITICAL \
+          ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}
 
-      - name: 🚀 Update Kubernetes Deployment
-        # Runs only if the Trivy scan passed
-        if: success()
+  deploy-kubernetes:
+    runs-on: ubuntu-latest
+    needs: trivy-scan
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Kubernetes & cluster
         run: |
-          # Patch the Deployment with the new image tag
-          kubectl set image deployment/${{ env.K8S_DEPLOYMENT }} \
-            ${{ env.K8S_CONTAINER_NAME }}=${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }} \
-            --namespace ${{ env.K8S_NAMESPACE }}
+          curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash 
+          k3d cluster create llmops --api-port 6550 -p "30007:30007@server:0" || echo "Cluster exists"
 
-          # Force a rollout restart and wait for completion
-          kubectl rollout restart deployment/${{ env.K8S_DEPLOYMENT }} \
-            --namespace ${{ env.K8S_NAMESPACE }}
-            
-          kubectl rollout status deployment/${{ env.K8S_DEPLOYMENT }} \
-            --namespace ${{ env.K8S_NAMESPACE }}
+      - name: Login for Kubernetes
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      
+      - name: Pull and Import image
+        run: |
+          docker pull ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}
+          k3d image import ${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }} -c llmops
 
-          echo "Deployment successful on DOKS."
+      - name: Deploy Kubernetes
+        run: |
+          kubectl apply -f ${{ env.DEPLOYMENT_FILE }}
+          kubectl apply -f ${{ env.SERVICE_FILE }}
+
+          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} \
+            ${{ env.CONTAINER_NAME }}=${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }} --record
+
+      - name: Kubernetes Rollout
+        run: | 
+          kubectl rollout status deployment/${{ env.DEPLOYMENT_NAME }} --timeout=180s
+
+      - name: Post Deploy Success
+        run: echo "App available at http://localhost:30007 (internally)."
