--- a/.github/workflows/llm-devsecops.yml
+++ b/.github/workflows/llm-devsecops.yml
@@ -20,6 +20,10 @@ jobs:
   build-push-docker:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
